--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "main": "./dist/electron/main.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
     "dotenv-webpack": "^1.7.0",
     "fontawesome": "^5.6.3",
     "vee-validate": "^2.2.13",
