--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "author": "Redeemer Pace",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
+    "build:dll": "webpack --progress --config .electron-vue/webpack.dll.config.js",
+    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
+    "build:darwin": "cross-env BUILD_TARGET=darwin node .electron-vue/build.js",
+    "build:linux": "cross-env BUILD_TARGET=linux node .electron-vue/build.js",
+    "build:mas": "cross-env BUILD_TARGET=mas node .electron-vue/build.js",
+    "build:win32": "cross-env BUILD_TARGET=win32 node .electron-vue/build.js",
     "test": "npm run unit && npm run e2e",
     "e2e": "npm run pack && mocha test/e2e",
     "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
-    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
     "dev": "node .electron-vue/dev-runner.js",
@@ -24,11 +29,15 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "dotenv-webpack": "^1.7.0",
+    "element-ui": "^2.10.1",
     "fontawesome": "^5.6.3",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "vee-validate": "^2.2.13",
     "vue": "^2.5.16",
     "vue-analytics": "^5.17.0",
     "vue-electron": "^1.0.6",
+    "vue-i18n": "^8.12.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.16",
     "vuetify-toast-snackbar": "^0.3.1",
