--- a/src/.env.example
+++ b/src/.env.example
@@ -9,3 +9,4 @@ MIX_GA_ID=
 # API
 API_ENDPOINT=https://branch.goz.fun
 MAIN_SITE=https://branch.goz.fun
+LAUNCHER_FILES_ENDPOINT=https://launcher.goz.fun/development/storage/
