Added test dir and new package

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-    "dev": "node .electron-vue/dev-runner.js",
+    "dev": "yarn run lint:fix && node .electron-vue/dev-runner.js",
     "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src test",
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
@@ -30,6 +30,7 @@
     "bootstrap": "^4.3.1",
     "dotenv-webpack": "^1.7.0",
     "fontawesome": "^5.6.3",
+    "hasha": "^5.0.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "vee-validate": "^2.2.13",
