--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "dotenv-webpack": "^1.7.0",
+    "electron-updater": "^4.1.2",
     "fontawesome": "^5.6.3",
     "hasha": "^5.0.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "progress-stream": "^2.0.0",
     "request-progress": "^3.0.0",
+    "shelljs": "^0.8.3",
     "vee-validate": "^2.2.13",
     "vue": "^2.5.16",
     "vue-analytics": "^5.17.0",
@@ -118,13 +120,15 @@
     "webpack-merge": "^4.1.3"
   },
   "build": {
-    "productName": "goz-gamelauncher",
+    "productName": "Gods of Zushin - Game Launcher",
     "appId": "goz.fun.app",
     "directories": {
       "output": "build"
     },
     "files": [
-      "dist/electron/**/*"
+      "dist/electron/**/*",
+      "node_modules/",
+      "package.json"
     ],
     "dmg": {
       "contents": [
