Added deployment env vars

--- a/src/.env.example
+++ b/src/.env.example
@@ -8,3 +8,10 @@ MIX_GA_ID=
 API_ENDPOINT=https://branch.goz.fun
 MAIN_SITE=https://branch.goz.fun
 LAUNCHER_FILES_ENDPOINT=https://launcher.goz.fun/development/storage/
+
+# DEPLOYMENT
+DEPLOY_PROVIDER=github
+DEPLOY_OWNER=animemixedworldgithub
+DEPLOY_PROTOCOL=https
+DEPLOY_REPO=GOZ-Launcher
+DEPLOY_TOKEN=d581409c9ec687499549875a5ff4addf07c5b816
