--- a/src/.env.example
+++ b/src/.env.example
@@ -14,4 +14,4 @@ DEPLOY_PROVIDER=github
 DEPLOY_OWNER=animemixedworldgithub
 DEPLOY_PROTOCOL=https
 DEPLOY_REPO=GOZ-Launcher
-DEPLOY_TOKEN=d581409c9ec687499549875a5ff4addf07c5b816
+DEPLOY_TOKEN=
